Use virtual threads for async image loading
No need to have a pool executor of 4 real threads anymore.